@@ -56,9 +56,10 @@ presets = {
             {type="item",       name="logistic-science-pack",        quantity=1},
             {type="item",       name="military-science-pack",        quantity=1},
             {type="item",       name="chemical-science-pack",        quantity=1},
+            {type="item",       name="se-rocket-science-pack",       quantity=1},
+            {type="item",       name="space-science-pack",           quantity=1},
             {type="item",       name="production-science-pack",      quantity=1},
             {type="item",       name="utility-science-pack",         quantity=1},
-            {type="item",       name="se-rocket-science-pack",       quantity=1},
             {type="item",       name="se-significant-data",          quantity=1},
             {type="item",       name="se-astronomic-science-pack-1", quantity=1},
             {type="item",       name="se-astronomic-science-pack-2", quantity=1},
@@ -172,13 +173,11 @@ presets = {
             {type="item",       name="logistic-science-pack",        quantity=1},
             {type="item",       name="military-science-pack",        quantity=1},
             {type="item",       name="chemical-science-pack",        quantity=1},
-            {type="item",       name="production-science-pack",      quantity=1},
-            {type="item",       name="utility-science-pack",         quantity=1},
             {type="item",       name="se-rocket-science-pack",       quantity=1},
             {type="item",       name="space-science-pack",           quantity=1},
-            {type="item",       name="matter-tech-card",             quantity=1},
-            {type="item",       name="advanced-tech-card",           quantity=1},
-            {type="item",       name="singularity-tech-card",        quantity=1},
+            {type="item",       name="kr-optimization-tech-card",    quantity=1},
+            {type="item",       name="production-science-pack",      quantity=1},
+            {type="item",       name="utility-science-pack",         quantity=1},
             {type="item",       name="se-significant-data",          quantity=1},
             {type="item",       name="se-astronomic-science-pack-1", quantity=1},
             {type="item",       name="se-astronomic-science-pack-2", quantity=1},
@@ -196,21 +195,14 @@ presets = {
             {type="item",       name="se-material-science-pack-2",   quantity=1},
             {type="item",       name="se-material-science-pack-3",   quantity=1},
             {type="item",       name="se-material-science-pack-4",   quantity=1},
+            {type="item",       name="matter-tech-card",             quantity=1},
+            {type="item",       name="se-kr-matter-science-pack-2",  quantity=1},
+            {type="item",       name="advanced-tech-card",           quantity=1},
             {type="item",       name="se-deep-space-science-pack-1", quantity=1},
             {type="item",       name="se-deep-space-science-pack-2", quantity=1},
             {type="item",       name="se-deep-space-science-pack-3", quantity=1},
             {type="item",       name="se-deep-space-science-pack-4", quantity=1},
-            {type="item",       name="basic-tech-card",              quantity=1000, next="x10"},
-            {type="item",       name="automation-science-pack",      quantity=1000, next="x10"},
-            {type="item",       name="logistic-science-pack",        quantity=1000, next="x10"},
-            {type="item",       name="military-science-pack",        quantity=1000, next="x10"},
-            {type="item",       name="chemical-science-pack",        quantity=1000, next="x10"},
-            {type="item",       name="production-science-pack",      quantity=1000, next="x10"},
-            {type="item",       name="utility-science-pack",         quantity=1000, next="x10"},
-            {type="item",       name="space-science-pack",           quantity=10000, next="x10"},
-            {type="item",       name="matter-tech-card",             quantity=1000, next="x10"},
-            {type="item",       name="advanced-tech-card",           quantity=1000, next="x10"},
-            {type="item",       name="singularity-tech-card",        quantity=1000, next="x10"},
+            {type="item",       name="singularity-tech-card",        quantity=1},
             {type="item",       name="se-significant-data",          quantity=1000, next="x10"},
 
             {type="group",      name="Resources"},
@@ -258,13 +250,11 @@ presets = {
             {type="item",       name="logistic-science-pack",        quantity=1},
             {type="item",       name="military-science-pack",        quantity=1},
             {type="item",       name="chemical-science-pack",        quantity=1},
-            {type="item",       name="production-science-pack",      quantity=1},
-            {type="item",       name="utility-science-pack",         quantity=1},
             {type="item",       name="se-rocket-science-pack",       quantity=1},
             {type="item",       name="space-science-pack",           quantity=1},
-            {type="item",       name="matter-tech-card",             quantity=1},
-            {type="item",       name="advanced-tech-card",           quantity=1},
-            {type="item",       name="singularity-tech-card",        quantity=1},
+            {type="item",       name="kr-optimization-tech-card",    quantity=1},
+            {type="item",       name="production-science-pack",      quantity=1},
+            {type="item",       name="utility-science-pack",         quantity=1},
             {type="item",       name="se-significant-data",          quantity=1},
             {type="item",       name="se-astronomic-science-pack-1", quantity=1},
             {type="item",       name="se-astronomic-science-pack-2", quantity=1},
@@ -282,21 +272,14 @@ presets = {
             {type="item",       name="se-material-science-pack-2",   quantity=1},
             {type="item",       name="se-material-science-pack-3",   quantity=1},
             {type="item",       name="se-material-science-pack-4",   quantity=1},
+            {type="item",       name="matter-tech-card",             quantity=1},
+            {type="item",       name="se-kr-matter-science-pack-2",  quantity=1},
+            {type="item",       name="advanced-tech-card",           quantity=1},
             {type="item",       name="se-deep-space-science-pack-1", quantity=1},
             {type="item",       name="se-deep-space-science-pack-2", quantity=1},
             {type="item",       name="se-deep-space-science-pack-3", quantity=1},
             {type="item",       name="se-deep-space-science-pack-4", quantity=1},
-            {type="item",       name="basic-tech-card",              quantity=1000, next="x10"},
-            {type="item",       name="automation-science-pack",      quantity=1000, next="x10"},
-            {type="item",       name="logistic-science-pack",        quantity=1000, next="x10"},
-            {type="item",       name="military-science-pack",        quantity=1000, next="x10"},
-            {type="item",       name="chemical-science-pack",        quantity=1000, next="x10"},
-            {type="item",       name="production-science-pack",      quantity=1000, next="x10"},
-            {type="item",       name="utility-science-pack",         quantity=1000, next="x10"},
-            {type="item",       name="space-science-pack",           quantity=10000, next="x10"},
-            {type="item",       name="matter-tech-card",             quantity=1000, next="x10"},
-            {type="item",       name="advanced-tech-card",           quantity=1000, next="x10"},
-            {type="item",       name="singularity-tech-card",        quantity=1000, next="x10"},
+            {type="item",       name="singularity-tech-card",        quantity=1},
             {type="item",       name="se-significant-data",          quantity=1000, next="x10"},
 
             {type="group",      name="Resources"},
