@@ -1,7 +1,10 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.4
 Date: ????
+
   Changes:
+    - More changes to SE and SE+K2 presets (I forgot the new science packs)
+
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.3
 Date: 2022-06-30
